--- a/backend/NFT/backend/package.json
+++ b/backend/NFT/backend/package.json
@@ -18,6 +18,7 @@
     "node": ">=18.0"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@pinata/sdk": "^2.1.0",
     "axios": "^1.3.2",
     "cors": "^2.8.5",
