--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@amityco/ui-kit": "^3.1.2",
     "@clerk/clerk-react": "^4.30.5",
     "@splinetool/react-spline": "^2.2.6",
+    "@taquito/beacon-wallet": "^19.0.1",
+    "@taquito/taquito": "^19.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
